scode/teamRAM/prob15/error.txt
  File "/var/www/html/scode/teamRAM/prob15/main.py", line 3
    if (1<=x<=y<=10**14)
                        ^
SyntaxError: expected ':'
